--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "task-with-table",
+  "homepage": "http://mckoev.github.io/table-task",
+  "name": "table-task",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +27,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +57,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^4.0.0",
     "prettier": "2.8.1"
   }
 }
